--- a/day05/wpf05_mvvm_app/ex10_MovieFinder2024/ex10_MovieFinder2024.csproj
+++ b/day05/wpf05_mvvm_app/ex10_MovieFinder2024/ex10_MovieFinder2024.csproj
@@ -7,6 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>movie.ico</ApplicationIcon>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,6 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CefSharp.Wpf.NETCore" Version="124.3.20" />
+    <PackageReference Include="Google.Apis.YouTube.v3" Version="1.68.0.3394" />
     <PackageReference Include="MahApps.Metro" Version="2.4.10" />
     <PackageReference Include="MahApps.Metro.IconPacks" Version="4.11.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
