--- a/day07/wpf07_openapi_app/ex11_Gimhae_FineDust/ex11_Gimhae_FineDust.csproj
+++ b/day07/wpf07_openapi_app/ex11_Gimhae_FineDust/ex11_Gimhae_FineDust.csproj
@@ -2,18 +2,12 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows7.0</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <ApplicationIcon>dust.ico</ApplicationIcon>
-    <BaseOutputPath>C:\Sources\Basic-wpf-2024\day07\wpf07_openapi_app\ex11_Gimhea_FineDust\bin</BaseOutputPath>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Content Include="dust.ico" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CefSharp.Wpf.NETCore" Version="124.3.50" />
